--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-split": "^2.0.14",
+    "split.js": "^1.6.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
