--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.2",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.7",
     "framer-motion": "^9.0.2",
     "phosphor-react": "^1.4.1",
